# swimming-app

./: .dockerignore  .env.example  .gitignore  100_Yard_Freestyle_Relay.csv  100_Yard_IM.csv  100_Yard_Medley_Relay.csv  25_Yard_Backstroke.csv  25_Yard_Breaststroke.csv  25_Yard_Butterfly.csv  25_Yard_Freestyle.csv  50_Yard_Backstroke.csv  50_Yard_Breaststroke.csv  50_Yard_Butterfly.csv  50_Yard_Freestyle.csv  Dockerfile.swimming  Makefile  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt  run_swimming_app.py  swimming_results_app.py
.github/workflows/: cd-dev.yml  env-promotion.yml  terraform-apply.yml
CSV/: swim_data.sample.csv
agent-rules/: agent_pr_quality_rules.md  csv_uniforming_rules.md  data_security_rules.md  deployment.md  env_promotion.md  gcloud.md  github_cd_wif_setup.md  load_balancer.md  master_runbook.md  redeployment.md  script_explanation.md
codex/: team_alias_analysis.csv
scripts/: next-dev-tag.sh
src/swimming_app/: __init__.py  pdf_parser.py  run_app.py  streamlit_app.py
terraform/: IMPORT.md
terraform/environments/dev/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/environments/production/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/environments/staging/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/modules/apis/: main.tf  outputs.tf  variables.tf
terraform/modules/artifact-registry/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud-armor/: main.tf  outputs.tf  variables.tf
terraform/modules/cloud-run/: main.tf  (+2 more)
(+18 files in other folders)
