[tool.poetry]
name = "my-name-app"
version = "0.1.0"
description = "dependencies for my-name-app"
authors = ["mishrasunny-coder <mishra.sunny@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
streamlit = "^1.40.0"
requests = "^2.32.3"
pandas = "^2.0.0"
plotly = "^5.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
