[tool.poetry]
name = "swimming-app"
version = "0.1.0"
description = "Swimming results parser and Streamlit app"
authors = ["mishrasunny-coder <mishra.sunny@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.50.0"
pandas = "^2.2.0"
plotly = "^6.3.1"
numpy = "^2.2.0"
pypdf = "^5.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "PDF",
  "CSV",
  "codex",
  "agent-rules",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
